--- a/src/main/resources/templates/kontoeinstellungen.html
+++ b/src/main/resources/templates/kontoeinstellungen.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-	<head th:include="fragments/head :: headFragment (pageTitle='Startseite')">
+	<head th:include="fragments/head :: headFragment (pageTitle='Kontoeinstellungen')">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
    		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	</head>
@@ -13,46 +13,7 @@
 	<div class="d-flex row h-100">
 	
 	<!-- Top navbar -->
-	<div class="col-12 align-self-start mt-3">
-		<nav class="navbar navbar-expand-lg navbar-light bg-dark bg-gradient d-flex rounded">
-		<img th:src="@{/image/logo_mini.jpg}" class="img-fluid p-2" alt="Unternehmenslogo">
-	  	<a class="d-none d-sm-flex navbar-brand text-white p-3 disabled" href="#">H&ouml;fische Beamten Versicherung</a>
-	  	<button class="navbar-toggler ms-auto" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	    	<span class="navbar-toggler-icon"></span>
-	  	</button>
-	
-		  <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-		    <ul class="navbar-nav mr-auto">
-		      <li class="nav-item active">
-		        <a class="nav-link text-white" href="#">Startseite <span class="sr-only">(current)</span></a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link text-white" href="#">Kontoeinstellungen</a>
-		      </li>
-		     <!-- Dropdown menu 
-		      <li class="nav-item dropdown">
-		        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		          Dropdown
-		        </a>
-		        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-		          <a class="dropdown-item" href="#">Action</a>
-		          <a class="dropdown-item" href="#">Another action</a>
-		          <div class="dropdown-divider"></div>
-		          <a class="dropdown-item" href="#">Something else here</a>
-		        </div>
-		      </li> -->
-		      <li class="nav-item">
-		        <a class="nav-link disabled text-white" href="#">&Uuml;ber uns</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link disabled text-white" href="#"></a>
-		      </li>
-		    </ul>
-		      
-		  	<button class="btn btn-outline-success my-2 my-sm-0 " type="submit">Abmelden</button>
-		  </div>
-	  
-		</nav>
+	<div th:replace="fragments/menue :: menu" class="col-12 align-self-start mt-3">
 	</div>
 	
 	<!-- form -->
@@ -93,7 +54,7 @@
 	
 	
 	<!-- Footer -->
-	<div class="align-self-end mb-2 justify-content-around">
+	<div th:replace="fragments/footer :: footer" class="align-self-end mb-2 justify-content-around">
 		<footer class="bg-dark bg-gradient text-center text-secondary text-lg-start rounded">
 		  <div class="p-3 d-flex justify-content-around">
 			  <a class="text-secondary d-none d-sm-flex" style="text-decoration: none" href="#">Datenschutz und Cookies</a>
